--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".BookListActivity">
@@ -25,7 +26,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".BookListActivity"
                 ></meta-data>
-
         </activity>
     </application>
 
